# en-garde

./: .gitignore  Cargo.toml
migrations/2022-02-25-050314_initial/: down.sql  up.sql
src/: main.rs
src/lib/: db.rs  lib.rs  manipulations.rs  model.rs  player.rs  schema.rs
templates/: home.html.hbs  index.html.hbs  navbar.html.hbs  new_player.html.hbs  player.html.hbs  players.html.hbs
templates/js/: form.js  navbar.js
templates/styles/: styles.css
