[package]
name = "en-garde"
version = "0.1.0"
edition = "2021"

[lib]
name = "en_garde_libs"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]
